[tool.poetry]
name = "radiostations"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
aiohttp = "3.8.3"
asyncio-pool = "0.6.0"
beautifulsoup4 = "4.12.2"
dacite = "1.6.0"
dataclasses-json = "0.5.7"
dvc = "2.51.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl"}
gitpython = "3.1.31"
google-api-python-client = "2.82.0"
html5lib = "1.1"
icrawler = "0.6.6"
lxml = "4.9.2"
nltk = "3.8"
numpy = "1.24.2"
openai = "0.26.4"
opencv-python = "4.7.0.72"
pandas = "1.4.4"
pytz = "2023.3"
requests = "2.26.0"
scikit-learn = "1.2.2"
selenium = "4.8.2"
shazamio = "^0.4.0.1"
spacy = "3.5.0"
spacy-langdetect = "0.1.2"
spotipy = "2.19.0"
tqdm = "4.65.0"
wikipedia-api = "0.5.8"
webdriver-manager = "4.0.1"
spotipyio = {git = "https://github.com/nirgodin/spotipyio.git"}
billboard-py = "^7.0.0"
data-collectors = {git = "https://github.com/nirgodin/radio-stations-data-collection.git", rev = "0dfc35c7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
